--- a/web-server/views/dynamicPartials/Encounter.ejs
+++ b/web-server/views/dynamicPartials/Encounter.ejs
@@ -1,27 +1,280 @@
 <div>
-    <form id="Encounter">
-        <input type='text' id='Encounter.identifier' name='identifier' placeholder='.'><br>"
-        <input type='text' id='Encounter.status' name='status' placeholder='.'><br>"
-        <input type='text' id='Encounter.statusHistory' name='statusHistory' placeholder='.'><br>"
-        <input type='text' id='Encounter.class' name='class' placeholder='.'><br>"
-        <input type='text' id='Encounter.classHistory' name='classHistory' placeholder='.'><br>"
-        <input type='text' id='Encounter.type' name='type' placeholder='.'><br>"
-        <input type='text' id='Encounter.serviceType' name='serviceType' placeholder='.'><br>"
-        <input type='text' id='Encounter.priority' name='priority' placeholder='.'><br>"
-        <input type='text' id='Encounter.subject' name='subject' placeholder='.'><br>"
-        <input type='text' id='Encounter.episodeOfCare' name='episodeOfCare' placeholder='.'><br>"
-        <input type='text' id='Encounter.basedOn' name='basedOn' placeholder='.'><br>"
-        <input type='text' id='Encounter.participant' name='participant' placeholder='.'><br>"
-        <input type='text' id='Encounter.appointment' name='appointment' placeholder='.'><br>"
-        <input type='text' id='Encounter.period' name='period' placeholder='.'><br>"
-        <input type='text' id='Encounter.length' name='length' placeholder='.'><br>"
-        <input type='text' id='Encounter.reasonCode' name='reasonCode' placeholder='.'><br>"
-        <input type='text' id='Encounter.reasonReference' name='reasonReference' placeholder='.'><br>"
-        <input type='text' id='Encounter.diagnosis' name='diagnosis' placeholder='.'><br>"
-        <input type='text' id='Encounter.account' name='account' placeholder='.'><br>"
-        <input type='text' id='Encounter.hospitalization' name='hospitalization' placeholder='.'><br>"
-        <input type='text' id='Encounter.location' name='location' placeholder='.'><br>"
-        <input type='text' id='Encounter.serviceProvider' name='serviceProvider' placeholder='.'><br>"
-        <input type='text' id='Encounter.partOf' name='partOf' placeholder='.'><br>"
-    </form>
-<div>
+<form id="Encounter">
+<div class="form-group">
+<label for='Encounter.identifier'>identifier</label>
+<input type='text' id='Encounter.identifier' name='identifier' placeholder='.'></div><br>
+<div class="form-group">
+<label for='Encounter.identifier'>identifier</label>
+<input type='text' id='Encounter.identifier' name='identifier' placeholder='.'></div><br>
+<div class="form-group">
+<label for='Encounter.identifier'>identifier</label>
+<input type='text' id='Encounter.identifier' name='identifier' placeholder='.'></div><br>
+<div class="form-group">
+<label for='Encounter.identifier'>identifier</label>
+<input type='text' id='Encounter.identifier' name='identifier' placeholder='.'></div><br>
+<div class="form-group">
+<label for='Encounter.status'>status</label>
+<input type='text' id='Encounter.status' name='status' placeholder='.'></div><br>
+<div class="form-group">
+<label for='Encounter.status'>status</label>
+<input type='text' id='Encounter.status' name='status' placeholder='.'></div><br>
+<div class="form-group">
+<label for='Encounter.status'>status</label>
+<input type='text' id='Encounter.status' name='status' placeholder='.'></div><br>
+<div class="form-group">
+<label for='Encounter.status'>status</label>
+<input type='text' id='Encounter.status' name='status' placeholder='.'></div><br>
+<div class="form-group">
+<label for='Encounter.statusHistory'>statusHistory</label>
+<input type='text' id='Encounter.statusHistory' name='statusHistory' placeholder='.'></div><br>
+<div class="form-group">
+<label for='Encounter.statusHistory'>statusHistory</label>
+<input type='text' id='Encounter.statusHistory' name='statusHistory' placeholder='.'></div><br>
+<div class="form-group">
+<label for='Encounter.statusHistory'>statusHistory</label>
+<input type='text' id='Encounter.statusHistory' name='statusHistory' placeholder='.'></div><br>
+<div class="form-group">
+<label for='Encounter.statusHistory'>statusHistory</label>
+<input type='text' id='Encounter.statusHistory' name='statusHistory' placeholder='.'></div><br>
+<div class="form-group">
+<label for='Encounter.class'>class</label>
+<input type='text' id='Encounter.class' name='class' placeholder='.'></div><br>
+<div class="form-group">
+<label for='Encounter.class'>class</label>
+<input type='text' id='Encounter.class' name='class' placeholder='.'></div><br>
+<div class="form-group">
+<label for='Encounter.class'>class</label>
+<input type='text' id='Encounter.class' name='class' placeholder='.'></div><br>
+<div class="form-group">
+<label for='Encounter.class'>class</label>
+<input type='text' id='Encounter.class' name='class' placeholder='.'></div><br>
+<div class="form-group">
+<label for='Encounter.classHistory'>classHistory</label>
+<input type='text' id='Encounter.classHistory' name='classHistory' placeholder='.'></div><br>
+<div class="form-group">
+<label for='Encounter.classHistory'>classHistory</label>
+<input type='text' id='Encounter.classHistory' name='classHistory' placeholder='.'></div><br>
+<div class="form-group">
+<label for='Encounter.classHistory'>classHistory</label>
+<input type='text' id='Encounter.classHistory' name='classHistory' placeholder='.'></div><br>
+<div class="form-group">
+<label for='Encounter.classHistory'>classHistory</label>
+<input type='text' id='Encounter.classHistory' name='classHistory' placeholder='.'></div><br>
+<div class="form-group">
+<label for='Encounter.type'>type</label>
+<input type='text' id='Encounter.type' name='type' placeholder='.'></div><br>
+<div class="form-group">
+<label for='Encounter.type'>type</label>
+<input type='text' id='Encounter.type' name='type' placeholder='.'></div><br>
+<div class="form-group">
+<label for='Encounter.type'>type</label>
+<input type='text' id='Encounter.type' name='type' placeholder='.'></div><br>
+<div class="form-group">
+<label for='Encounter.type'>type</label>
+<input type='text' id='Encounter.type' name='type' placeholder='.'></div><br>
+<div class="form-group">
+<label for='Encounter.serviceType'>serviceType</label>
+<input type='text' id='Encounter.serviceType' name='serviceType' placeholder='.'></div><br>
+<div class="form-group">
+<label for='Encounter.serviceType'>serviceType</label>
+<input type='text' id='Encounter.serviceType' name='serviceType' placeholder='.'></div><br>
+<div class="form-group">
+<label for='Encounter.serviceType'>serviceType</label>
+<input type='text' id='Encounter.serviceType' name='serviceType' placeholder='.'></div><br>
+<div class="form-group">
+<label for='Encounter.serviceType'>serviceType</label>
+<input type='text' id='Encounter.serviceType' name='serviceType' placeholder='.'></div><br>
+<div class="form-group">
+<label for='Encounter.priority'>priority</label>
+<input type='text' id='Encounter.priority' name='priority' placeholder='.'></div><br>
+<div class="form-group">
+<label for='Encounter.priority'>priority</label>
+<input type='text' id='Encounter.priority' name='priority' placeholder='.'></div><br>
+<div class="form-group">
+<label for='Encounter.priority'>priority</label>
+<input type='text' id='Encounter.priority' name='priority' placeholder='.'></div><br>
+<div class="form-group">
+<label for='Encounter.priority'>priority</label>
+<input type='text' id='Encounter.priority' name='priority' placeholder='.'></div><br>
+<div class="form-group">
+<label for='Encounter.subject'>subject</label>
+<input type='text' id='Encounter.subject' name='subject' placeholder='.'></div><br>
+<div class="form-group">
+<label for='Encounter.subject'>subject</label>
+<input type='text' id='Encounter.subject' name='subject' placeholder='.'></div><br>
+<div class="form-group">
+<label for='Encounter.subject'>subject</label>
+<input type='text' id='Encounter.subject' name='subject' placeholder='.'></div><br>
+<div class="form-group">
+<label for='Encounter.subject'>subject</label>
+<input type='text' id='Encounter.subject' name='subject' placeholder='.'></div><br>
+<div class="form-group">
+<label for='Encounter.episodeOfCare'>episodeOfCare</label>
+<input type='text' id='Encounter.episodeOfCare' name='episodeOfCare' placeholder='.'></div><br>
+<div class="form-group">
+<label for='Encounter.episodeOfCare'>episodeOfCare</label>
+<input type='text' id='Encounter.episodeOfCare' name='episodeOfCare' placeholder='.'></div><br>
+<div class="form-group">
+<label for='Encounter.episodeOfCare'>episodeOfCare</label>
+<input type='text' id='Encounter.episodeOfCare' name='episodeOfCare' placeholder='.'></div><br>
+<div class="form-group">
+<label for='Encounter.episodeOfCare'>episodeOfCare</label>
+<input type='text' id='Encounter.episodeOfCare' name='episodeOfCare' placeholder='.'></div><br>
+<div class="form-group">
+<label for='Encounter.basedOn'>basedOn</label>
+<input type='text' id='Encounter.basedOn' name='basedOn' placeholder='.'></div><br>
+<div class="form-group">
+<label for='Encounter.basedOn'>basedOn</label>
+<input type='text' id='Encounter.basedOn' name='basedOn' placeholder='.'></div><br>
+<div class="form-group">
+<label for='Encounter.basedOn'>basedOn</label>
+<input type='text' id='Encounter.basedOn' name='basedOn' placeholder='.'></div><br>
+<div class="form-group">
+<label for='Encounter.basedOn'>basedOn</label>
+<input type='text' id='Encounter.basedOn' name='basedOn' placeholder='.'></div><br>
+<div class="form-group">
+<label for='Encounter.participant'>participant</label>
+<input type='text' id='Encounter.participant' name='participant' placeholder='.'></div><br>
+<div class="form-group">
+<label for='Encounter.participant'>participant</label>
+<input type='text' id='Encounter.participant' name='participant' placeholder='.'></div><br>
+<div class="form-group">
+<label for='Encounter.participant'>participant</label>
+<input type='text' id='Encounter.participant' name='participant' placeholder='.'></div><br>
+<div class="form-group">
+<label for='Encounter.participant'>participant</label>
+<input type='text' id='Encounter.participant' name='participant' placeholder='.'></div><br>
+<div class="form-group">
+<label for='Encounter.appointment'>appointment</label>
+<input type='text' id='Encounter.appointment' name='appointment' placeholder='.'></div><br>
+<div class="form-group">
+<label for='Encounter.appointment'>appointment</label>
+<input type='text' id='Encounter.appointment' name='appointment' placeholder='.'></div><br>
+<div class="form-group">
+<label for='Encounter.appointment'>appointment</label>
+<input type='text' id='Encounter.appointment' name='appointment' placeholder='.'></div><br>
+<div class="form-group">
+<label for='Encounter.appointment'>appointment</label>
+<input type='text' id='Encounter.appointment' name='appointment' placeholder='.'></div><br>
+<div class="form-group">
+<label for='Encounter.period'>period</label>
+<input type='text' id='Encounter.period' name='period' placeholder='.'></div><br>
+<div class="form-group">
+<label for='Encounter.period'>period</label>
+<input type='text' id='Encounter.period' name='period' placeholder='.'></div><br>
+<div class="form-group">
+<label for='Encounter.period'>period</label>
+<input type='text' id='Encounter.period' name='period' placeholder='.'></div><br>
+<div class="form-group">
+<label for='Encounter.period'>period</label>
+<input type='text' id='Encounter.period' name='period' placeholder='.'></div><br>
+<div class="form-group">
+<label for='Encounter.length'>length</label>
+<input type='text' id='Encounter.length' name='length' placeholder='.'></div><br>
+<div class="form-group">
+<label for='Encounter.length'>length</label>
+<input type='text' id='Encounter.length' name='length' placeholder='.'></div><br>
+<div class="form-group">
+<label for='Encounter.length'>length</label>
+<input type='text' id='Encounter.length' name='length' placeholder='.'></div><br>
+<div class="form-group">
+<label for='Encounter.length'>length</label>
+<input type='text' id='Encounter.length' name='length' placeholder='.'></div><br>
+<div class="form-group">
+<label for='Encounter.reasonCode'>reasonCode</label>
+<input type='text' id='Encounter.reasonCode' name='reasonCode' placeholder='.'></div><br>
+<div class="form-group">
+<label for='Encounter.reasonCode'>reasonCode</label>
+<input type='text' id='Encounter.reasonCode' name='reasonCode' placeholder='.'></div><br>
+<div class="form-group">
+<label for='Encounter.reasonCode'>reasonCode</label>
+<input type='text' id='Encounter.reasonCode' name='reasonCode' placeholder='.'></div><br>
+<div class="form-group">
+<label for='Encounter.reasonCode'>reasonCode</label>
+<input type='text' id='Encounter.reasonCode' name='reasonCode' placeholder='.'></div><br>
+<div class="form-group">
+<label for='Encounter.reasonReference'>reasonReference</label>
+<input type='text' id='Encounter.reasonReference' name='reasonReference' placeholder='.'></div><br>
+<div class="form-group">
+<label for='Encounter.reasonReference'>reasonReference</label>
+<input type='text' id='Encounter.reasonReference' name='reasonReference' placeholder='.'></div><br>
+<div class="form-group">
+<label for='Encounter.reasonReference'>reasonReference</label>
+<input type='text' id='Encounter.reasonReference' name='reasonReference' placeholder='.'></div><br>
+<div class="form-group">
+<label for='Encounter.reasonReference'>reasonReference</label>
+<input type='text' id='Encounter.reasonReference' name='reasonReference' placeholder='.'></div><br>
+<div class="form-group">
+<label for='Encounter.diagnosis'>diagnosis</label>
+<input type='text' id='Encounter.diagnosis' name='diagnosis' placeholder='.'></div><br>
+<div class="form-group">
+<label for='Encounter.diagnosis'>diagnosis</label>
+<input type='text' id='Encounter.diagnosis' name='diagnosis' placeholder='.'></div><br>
+<div class="form-group">
+<label for='Encounter.diagnosis'>diagnosis</label>
+<input type='text' id='Encounter.diagnosis' name='diagnosis' placeholder='.'></div><br>
+<div class="form-group">
+<label for='Encounter.diagnosis'>diagnosis</label>
+<input type='text' id='Encounter.diagnosis' name='diagnosis' placeholder='.'></div><br>
+<div class="form-group">
+<label for='Encounter.account'>account</label>
+<input type='text' id='Encounter.account' name='account' placeholder='.'></div><br>
+<div class="form-group">
+<label for='Encounter.account'>account</label>
+<input type='text' id='Encounter.account' name='account' placeholder='.'></div><br>
+<div class="form-group">
+<label for='Encounter.account'>account</label>
+<input type='text' id='Encounter.account' name='account' placeholder='.'></div><br>
+<div class="form-group">
+<label for='Encounter.account'>account</label>
+<input type='text' id='Encounter.account' name='account' placeholder='.'></div><br>
+<div class="form-group">
+<label for='Encounter.hospitalization'>hospitalization</label>
+<input type='text' id='Encounter.hospitalization' name='hospitalization' placeholder='.'></div><br>
+<div class="form-group">
+<label for='Encounter.hospitalization'>hospitalization</label>
+<input type='text' id='Encounter.hospitalization' name='hospitalization' placeholder='.'></div><br>
+<div class="form-group">
+<label for='Encounter.hospitalization'>hospitalization</label>
+<input type='text' id='Encounter.hospitalization' name='hospitalization' placeholder='.'></div><br>
+<div class="form-group">
+<label for='Encounter.hospitalization'>hospitalization</label>
+<input type='text' id='Encounter.hospitalization' name='hospitalization' placeholder='.'></div><br>
+<div class="form-group">
+<label for='Encounter.location'>location</label>
+<input type='text' id='Encounter.location' name='location' placeholder='.'></div><br>
+<div class="form-group">
+<label for='Encounter.location'>location</label>
+<input type='text' id='Encounter.location' name='location' placeholder='.'></div><br>
+<div class="form-group">
+<label for='Encounter.location'>location</label>
+<input type='text' id='Encounter.location' name='location' placeholder='.'></div><br>
+<div class="form-group">
+<label for='Encounter.location'>location</label>
+<input type='text' id='Encounter.location' name='location' placeholder='.'></div><br>
+<div class="form-group">
+<label for='Encounter.serviceProvider'>serviceProvider</label>
+<input type='text' id='Encounter.serviceProvider' name='serviceProvider' placeholder='.'></div><br>
+<div class="form-group">
+<label for='Encounter.serviceProvider'>serviceProvider</label>
+<input type='text' id='Encounter.serviceProvider' name='serviceProvider' placeholder='.'></div><br>
+<div class="form-group">
+<label for='Encounter.serviceProvider'>serviceProvider</label>
+<input type='text' id='Encounter.serviceProvider' name='serviceProvider' placeholder='.'></div><br>
+<div class="form-group">
+<label for='Encounter.serviceProvider'>serviceProvider</label>
+<input type='text' id='Encounter.serviceProvider' name='serviceProvider' placeholder='.'></div><br>
+<div class="form-group">
+<label for='Encounter.partOf'>partOf</label>
+<input type='text' id='Encounter.partOf' name='partOf' placeholder='.'></div><br>
+<div class="form-group">
+<label for='Encounter.partOf'>partOf</label>
+<input type='text' id='Encounter.partOf' name='partOf' placeholder='.'></div><br>
+<div class="form-group">
+<label for='Encounter.partOf'>partOf</label>
+<input type='text' id='Encounter.partOf' name='partOf' placeholder='.'></div><br>
+<div class="form-group">
+<label for='Encounter.partOf'>partOf</label>
+<input type='text' id='Encounter.partOf' name='partOf' placeholder='.'></div><br>
+</form>
+    <div>
