--- a/web-server/views/dynamicPartials/Patient.ejs
+++ b/web-server/views/dynamicPartials/Patient.ejs
@@ -1,52 +1,59 @@
 <div>
-    <form id="Patient">
+        <form id="Patient">
+        <h3>Patient Resource:</h3>
     <div class="form-group">
-    <label for='Patient.identifier'>identifier</label>
-    <input type='text' id='Patient.identifier' name='identifier' placeholder='.'></div><br>
-    <div class="form-group">
-    <label for='Patient.active'>active</label>
-    <input type='text' id='Patient.active' name='active' placeholder='.'></div><br>
-    <div class="form-group">
-    <label for='Patient.name'>name</label>
-    <input type='text' id='Patient.name' name='name' placeholder='.'></div><br>
-    <div class="form-group">
-    <label for='Patient.telecom'>telecom</label>
-    <input type='text' id='Patient.telecom' name='telecom' placeholder='.'></div><br>
-    <div class="form-group">
-    <label for='Patient.gender'>gender</label>
-    <input type='text' id='Patient.gender' name='gender' placeholder='.'></div><br>
-    <div class="form-group">
-    <label for='Patient.birthDate'>birthDate</label>
-    <input type='text' id='Patient.birthDate' name='birthDate' placeholder='.'></div><br>
-    <div class="form-group">
-    <label for='Patient.'></label>
-    <input type='text' id='Patient.' name='' placeholder='.'></div><br>
-    <div class="form-group">
-    <label for='Patient.address'>address</label>
-    <input type='text' id='Patient.address' name='address' placeholder='.'></div><br>
-    <div class="form-group">
-    <label for='Patient.maritalStatus'>maritalStatus</label>
-    <input type='text' id='Patient.maritalStatus' name='maritalStatus' placeholder='.'></div><br>
-    <div class="form-group">
-    <label for='Patient.'></label>
-    <input type='text' id='Patient.' name='' placeholder='.'></div><br>
-    <div class="form-group">
-    <label for='Patient.photo'>photo</label>
-    <input type='text' id='Patient.photo' name='photo' placeholder='.'></div><br>
-    <div class="form-group">
-    <label for='Patient.contact'>contact</label>
-    <input type='text' id='Patient.contact' name='contact' placeholder='.'></div><br>
-    <div class="form-group">
-    <label for='Patient.communication'>communication</label>
-    <input type='text' id='Patient.communication' name='communication' placeholder='.'></div><br>
-    <div class="form-group">
-    <label for='Patient.generalPractitioner'>generalPractitioner</label>
-    <input type='text' id='Patient.generalPractitioner' name='generalPractitioner' placeholder='.'></div><br>
-    <div class="form-group">
-    <label for='Patient.managingOrganization'>managingOrganization</label>
-    <input type='text' id='Patient.managingOrganization' name='managingOrganization' placeholder='.'></div><br>
-    <div class="form-group">
-    <label for='Patient.link'>link</label>
-    <input type='text' id='Patient.link' name='link' placeholder='.'></div><br>
-    </form>
-        <div>
+<label for='Patient.identifier'>identifier</label>
+<input type='text' id='Patient.identifier' name='identifier' placeholder='.'></div><br>
+<div class="form-group">
+<label for='Patient.active'>active</label>
+<input type='text' id='Patient.active' name='active' placeholder='.'></div><br>
+<div class="form-group">
+<label for='Patient.name'>name</label>
+<input type='text' id='Patient.name' name='name' placeholder='.'></div><br>
+<div class="form-group">
+<label for='Patient.telecom'>telecom</label>
+<input type='text' id='Patient.telecom' name='telecom' placeholder='.'></div><br>
+<div class="form-group">
+<label for='Patient.gender'>gender</label>
+<input type='text' id='Patient.gender' name='gender' placeholder='.'></div><br>
+<div class="form-group">
+<label for='Patient.birthDate'>birthDate</label>
+<input type='text' id='Patient.birthDate' name='birthDate' placeholder='.'></div><br>
+<div class='form-group'>
+<label for='Patient.deceasedBoolean'>deceasedBoolean*</label>
+<input type='text' id='Patient.deceasedBoolean' name='deceasedBoolean' placeholder='.'></div><br>
+<div class='form-group'>
+<label for='Patient.deceasedDateTime'>deceasedDateTime*</label>
+<input type='text' id='Patient.deceasedDateTime' name='deceasedDateTime' placeholder='.'></div><br>
+<div class="form-group">
+<label for='Patient.address'>address</label>
+<input type='text' id='Patient.address' name='address' placeholder='.'></div><br>
+<div class="form-group">
+<label for='Patient.maritalStatus'>maritalStatus</label>
+<input type='text' id='Patient.maritalStatus' name='maritalStatus' placeholder='.'></div><br>
+<div class='form-group'>
+<label for='Patient.multipleBirthBoolean'>multipleBirthBoolean*</label>
+<input type='text' id='Patient.multipleBirthBoolean' name='multipleBirthBoolean' placeholder='.'></div><br>
+<div class='form-group'>
+<label for='Patient.multipleBirthInteger'>multipleBirthInteger*</label>
+<input type='text' id='Patient.multipleBirthInteger' name='multipleBirthInteger' placeholder='.'></div><br>
+<div class="form-group">
+<label for='Patient.photo'>photo</label>
+<input type='text' id='Patient.photo' name='photo' placeholder='.'></div><br>
+<div class="form-group">
+<label for='Patient.contact'>contact</label>
+<input type='text' id='Patient.contact' name='contact' placeholder='.'></div><br>
+<div class="form-group">
+<label for='Patient.communication'>communication</label>
+<input type='text' id='Patient.communication' name='communication' placeholder='.'></div><br>
+<div class="form-group">
+<label for='Patient.generalPractitioner'>generalPractitioner</label>
+<input type='text' id='Patient.generalPractitioner' name='generalPractitioner' placeholder='.'></div><br>
+<div class="form-group">
+<label for='Patient.managingOrganization'>managingOrganization</label>
+<input type='text' id='Patient.managingOrganization' name='managingOrganization' placeholder='.'></div><br>
+<div class="form-group">
+<label for='Patient.link'>link</label>
+<input type='text' id='Patient.link' name='link' placeholder='.'></div><br>
+</form>
+    <div>
